# mem0-analytics

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  analytics.py  chat_app.py  docker-compose.yml  metrics.py  pyproject.toml  requirements.txt  scheduler.py  schema.sql  scrape_agent.py  setup.cfg  setup.py  test.py
src/analytics/: __init__.py  daemon.py
src/mem0_analytics/: __init__.py  aggregate.py  analytics.py  dashboard.py  example.py  scrape_agent.py
src/mem0_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/schema/: schema.sql
static/: exporter.py
