[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem0-analytics"
version = "0.1.0"
description = "Real-time analytics and monitoring infrastructure for Mem0 — tracks all LLMs, vector stores, and embedders automatically."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Kaushal", email = "your@email.com" }
]
keywords = [
    "mem0", "analytics", "observability", "monitoring", "llm", "rag",
    "vector-store", "embedding", "posthog", "dashboard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mem0>=0.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/mem0ai/mem0-analytics"
Repository = "https://github.com/mem0ai/mem0-analytics"
Issues = "https://github.com/mem0ai/mem0-analytics/issues"
