[metadata]
name = mem0-analytics
version = 0.1.0
author = Kaushal
description = Real-time analytics for Mem0 memory systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaushal07wick/mem0-analytics
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    mem0-analytics-daemon = analytics.daemon:run_daemon
    mem0-analytics-track = analytics.analytics:main

[options.packages.find]
where = src
